--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -13,118 +13,137 @@
     <div class="row">
         <!===== Left Side, User Profile Image and Details =====>
         <div id="left-side-user-info-container" class="col-12 col-sm-4 col-md-4">
+            <!-- Not sure what this div is for? -->
             <div id="user-profile-info">
-                <!===  Settings Button ====>
-                <aside id="setting-button-container" class="setting-container">
-                    <img th:src="@{/img/settings.png}" alt="Setting Button">
-                </aside>
-                <!=== Profile IMG ===>
-                <section class="user-profile-picture-container">
-                    <img class="user-profile-picture" th:src="@{img/noProfileImage.png}" th:if="${user.profilePicturePath == ''}" alt="No Image Provided" />
-                    <img class="user-profile-picture" th:src="${profilePathway}" th:if="${user.profilePicturePath != ''}" th:alt="${user.getUsername()}">
-                    <button class="button-17 mt-3">Add Friend</button>
+                <!-- image section container -->
+                <section class="user-profile-container" id="user-profile-container">
+                    <!-- Image if there is no pathway -->
+                    <img
+                        class="user-profile-picture"
+                        th:src="@{/img/noProfileImage.png}"
+                        th:if="${user.profilePicturePath == ''}"
+                        alt="No Image Provided">
+                    <!-- Profile Picture -->
+                    <img
+                        class="user-profile-picture"
+                        th:src="${user.getProfilePicturePath()}"
+                        th:if="${user.profilePicturePath != ''}"
+                        th:alt="${user.getUsername()}">
                 </section>
-                <!=== User Details ===>
-                <section class="user-details-container">
-                    <h2 class="user-username"> Hello <span th:text="${user.getUsername()}">username</span></h2>
-                    <p class="user-bio" th:unless="${user.getBio() == ''}" th:text="${user.getBio() != null ? user.getBio().substring(0, 1).toUpperCase() + user.getBio().substring(1) : 'No Bio'}"></p>
-                    <hr class="w-75 mx-auto">
-                    <small class="fav-genre-title">Favorite Genre:</small>
-                    <aside class="user-fav-genre-container">
-                        <span th:each="favoriteGenre : ${favoriteGenres}" th:text="${favoriteGenre.genre.name}"></span>
+                <section class="user-information-container" id="user-information-container">
+                    <!-- Add a Friend Button -->
+                    <button class="friend-button" th:if="${hideForNow != 'hide'}">Add Friend</button>
+                    <!-- Unfriend Button -->
+                    <button class="unfriend-button" th:if="${hideForNow != 'hide'}">Unfriend</button>
+                    <!-- Setting Button -->
+                    <button class="setting-button" id="setting-button" th:if="${hideForNow != 'show'}">Setting</button>
+                    <!-- User Greeting -->
+                    <h2>
+                        Hello <span th:text="${user.getUsername()}">USERNAME</span>,
+                    </h2>
+                    <!-- User Bio -->
+                    <p
+                    class="user-bio"
+                    th:unless="${user.getBio() == ''}"
+                    th:text="${user.getBio() != null ? user.getBio() : 'No Bio yet'}">
+                        Fake Bio
+                    </p>
+                    <!-- Favorite Genre -->
+                    <p class="fav-genre-profile">Favorite Genre:</p>
+                    <aside>
+                        <p th:each="favGenre : ${user.getFavoriteGenres()}" th:text="${favGenre.genre.name}"></p>
                     </aside>
                 </section>
-            </div>
-            <!=== Settings Form ===>
-            <div id="setting-form-container">
-                <form th:action="@{/in/{id} (id=${user.getId()})}"
-                        th:object="${user}"
-                        method="post"
-                      enctype="multipart/form-data">
-                    <h3>Settings</h3>
-                    <!-- Profile Picture -->
-                    <div class="mb-3">
-                        <label for="setting-profile-picture" class="form-label">Profile Picture:</label>
-                        <input class="form-control" type="file" id="setting-profile-picture" th:field="*{profilePictureFile}">
-                    </div>
-                    <!-- First Name -->
-                    <div class="mb-3">
-                        <label for="setting-first-name" class="form-label">First Name:</label>
-                        <input type="text"
-                               title="Uppercase & Lowercase letters only, no punctuation, numbers, or special characters and between 3 and 30 characters"
-                               class="form-control"
-                               th:field="*{first_name}"
-                               th:value="${first_name}"
-                               id="setting-first-name"
-                               pattern="[a-zA-Z]{3,30}">
-                    </div>
-                    <!-- Last Name -->
-                    <div class="mb-3">
-                        <label for="setting-last-name" class="form-label">Last Name:</label>
-                        <input type="text"
-                               class="form-control"
-                               id="setting-last-name"
-                               th:field="*{last_name}"
-                               th:value="${last_name}"
-                               minlength="3"
-                               maxlength="30"
-                               title="Uppercase & Lowercase letters only, no punctuation, numbers, or special characters and between 3 and 30 characters"
-                               pattern="[a-zA-Z]{3,30}">
-                    </div>
-                    <!-- Username -->
-                    <div class="mb-3">
-                        <label for="setting-username" class="form-label">Username:</label>
-                        <input type="text"
-                               class="form-control"
-                               id="setting-username"
-                               th:value="${username}"
-                               th:field="*{username}">
-                    </div>
-                    <!-- Email -->
-                    <div class="mb-3">
-                        <label for="settingsEmail" class="form-label">Email address</label>
-                        <input type="email"
-                               class="form-control"
-                               id="settingsEmail"
-                               minlength="6"
-                               maxlength="254"
-                               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-                               th:value="${email}"
-                               th:field="*{email}"
-                               title="Please provide a valid email">
-                    </div>
-                    <!-- password -->
-                    <div class="mb-3">
-                        <label for="settingsPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="settingsPassword" aria-describedby="passwordHelp" th:field="*{password}">
-                        <div id="passwordHelp">Your password must be 8-20 characters long, 2 Uppercase & 2 Lowercase, 2 Numbers, 2 Special Characters</div>
-                    </div>
-                    <!-- Bio -->
-                    <div class="mb-3">
-                        <label for="setting-bio" class="form-label">Bio:</label>
-<!--                        <textarea th:value="${user.getBio()}" class="form-control" id="setting-bio" rows="3"></textarea>-->
-                        <textarea
-                                  class="form-control"
-                                  id="setting-bio"
-                                  rows="3"
-                                  style="resize: none;"
-                                  th:field="*{bio}"
-                                  th:value="${bio}">
-                        </textarea>
-                    </div>
-                    <!-- Cancel Button -->
-                    <button type="button" id="setting-cancel-button" class="btn btn-secondary">Cancel</button>
-                    <!-- Submit Button -->
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <input type="hidden" th:field="*{id}" th:value="${user.id}">
-                </form>
+                <section class="user-setting-container" id="setting-form-container">
+                    <form th:action="@{/in/{id} (id=${user.getId()})}"
+                          th:object="${user}"
+                          method="post"
+                          enctype="multipart/form-data">
+                        <!-- Form Title -->
+                        <h3>Settings</h3>
+                        <!-- Hidden User Id Input -->
+                        <input type="hidden" th:field="*{id}" th:value="${user.id}">
+                        <!-- Profile Picture -->
+                        <div class="mb-3">
+                            <label for="setting-profile-picture" class="form-label">Profile Picture:</label>
+                            <input class="form-control" type="file" id="setting-profile-picture" th:field="*{profilePictureFile}">
+                        </div>
+                        <!-- First Name -->
+                        <div class="mb-3">
+                            <label for="setting-first-name" class="form-label">First Name:</label>
+                            <input type="text"
+                                   title="Uppercase & Lowercase letters only, no punctuation, numbers, or special characters and between 3 and 30 characters"
+                                   class="form-control"
+                                   th:field="*{first_name}"
+                                   th:value="${first_name}"
+                                   id="setting-first-name"
+                                   pattern="[a-zA-Z]{3,30}">
+                        </div>
+                        <!-- Last Name -->
+                        <div class="mb-3">
+                            <label for="setting-last-name" class="form-label">Last Name:</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="setting-last-name"
+                                   th:field="*{last_name}"
+                                   th:value="${last_name}"
+                                   minlength="3"
+                                   maxlength="30"
+                                   title="Uppercase & Lowercase letters only, no punctuation, numbers, or special characters and between 3 and 30 characters"
+                                   pattern="[a-zA-Z]{3,30}">
+                        </div>
+                        <!-- Username -->
+                        <div class="mb-3">
+                            <label for="setting-username" class="form-label">Username:</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="setting-username"
+                                   th:value="${username}"
+                                   th:field="*{username}">
+                        </div>
+                        <!-- Email -->
+                        <div class="mb-3">
+                            <label for="settingsEmail" class="form-label">Email address</label>
+                            <input type="email"
+                                   class="form-control"
+                                   id="settingsEmail"
+                                   minlength="6"
+                                   maxlength="254"
+                                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                                   th:value="${email}"
+                                   th:field="*{email}"
+                                   title="Please provide a valid email">
+                        </div>
+                        <!-- password -->
+                        <div class="mb-3">
+                            <label for="settingsPassword" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="settingsPassword" aria-describedby="passwordHelp" th:field="*{password}">
+                            <div id="passwordHelp">Your password must be 8-20 characters long, 2 Uppercase & 2 Lowercase, 2 Numbers, 2 Special Characters</div>
+                        </div>
+                        <!-- Bio-->
+                        <div class="mb-3">
+                            <label for="setting-bio" class="form-label">Bio:</label>
+                            <textarea
+                                    class="form-control"
+                                    id="setting-bio"
+                                    rows="3"
+                                    style="resize: none;"
+                                    th:field="*{bio}"
+                                    th:value="${bio}">
+                            </textarea>
+                        </div>
+                        <!-- Submit and Cancel Buttons -->
+                        <button type="submit" id="submitEditProfileButton">Submit</button>
+                        <button type="reset" id="cancelEditProfileButton">Cancel</button>
+                    </form>
+                </section>
             </div>
         </div>
 
-        <!===== Right Side, User Reviews =====>
-        <div id="right-side-user-reviews-container" class="col-12 col-sm-8 col-md-8">
+          <!===== Right Side, User Reviews =====>
+          <div id="right-side-user-reviews-container" class="col-12 col-sm-8 col-md-8">
 
-            <!-- Favorite Book Container -->
+          <!-- Favorite Book Container -->
             <div>
                 <!-- Container Title - (Favorite Book) -->
                 <div class="section-title">
@@ -228,55 +247,7 @@
 <footer th:replace="partials/footer.html :: Footer"></footer>
 <script th:src="@{/js/userProfile.js}"></script>
 <script th:src="@{/js/searchForBookNavbar.js}"></script>
-
-<script>
-
-    // //-- Showcase of the value for the rating.
-    // const rangeInput = document.getElementById('reviewRate');
-    // const valueDisplay = document.getElementById('rateValue');
-    // // Set initial value
-    // valueDisplay.textContent = rangeInput.value;
-    // // Update value on input change
-    // rangeInput.addEventListener('input', function() {
-    //     valueDisplay.textContent = this.value;
-    // });
-
-    document.addEventListener("DOMContentLoaded", () => {
-        let editForm = document.querySelectorAll(".edit-review-form-container");
-            editForm.forEach((element) =>{
-                element.style.display = "none";
-            })
-
-            document.querySelectorAll(".user-review-edit-button").forEach((button, index) => {
-            // Assuming each button corresponds to the respective containers by index
-            let reviewContainer = document.querySelectorAll(".review-user-wrote-container")[index];
-            let editForm = document.querySelectorAll(".edit-review-form-container")[index];
-
-
-            button.addEventListener("click", () => {
-                console.log("edit Button Pushed")
-                // Toggle visibility
-                reviewContainer.style.display = reviewContainer.style.display === "none" ? "block" : "none";
-                editForm.style.display = editForm.style.display === "none" ? "block" : "none";
-            });
-        });
-       document.querySelectorAll(".edit-review-cancel-button").forEach((button, index) => {
-            // Assuming each button corresponds to the respective containers by index
-            let reviewContainer = document.querySelectorAll(".review-user-wrote-container")[index];
-            let editForm = document.querySelectorAll(".edit-review-form-container")[index];
-            let editReviewForm = document.querySelectorAll(".edit-review-form")[index];
-
-            button.addEventListener("click", () => {
-                // Toggle visibility
-                editForm.style.display = editForm.style.display === "none" ? "block" : "none";
-                reviewContainer.style.display = reviewContainer.style.display  === "none" ? "block" : "none";
-                editReviewForm.reset();
-            });
-        });
-
-    });
-
-</script>
+<script th:src="@{/js/edit-reviews.js}"></script>
 
 </body>
 </html>
