--- a/src/main/resources/static/css/signinStylesheet.css
+++ b/src/main/resources/static/css/signinStylesheet.css
@@ -22,6 +22,12 @@
     width: 100%;
 }
 
+/*#login-form-submit-btn:hover {*/
+/*    background-color: rgb(63, 78, 107);*/
+/*    border: 1px solid rgb(63, 78, 107);*/
+/*}*/
+
+
 
 /*========== Register Page ===========*/
 /*=== Main Container of Form ===*/
@@ -44,7 +50,7 @@
 }
 
 /*=== Submit Button ===*/
-#register-form-submit-btn{
+#register-form-submit-btn, #login-form-submit-btn{
     background-color: #4880d3;
     border: 1px solid #4880d3;
     border-radius: 4px;
@@ -69,7 +75,7 @@
     margin: 24px 0 0 0;
 }
 /*=== Submit Button Hover===*/
-#register-form-submit-btn:hover {
+#register-form-submit-btn:hover, #login-form-submit-btn:hover {
     background-color: rgb(63, 78, 107);
     border: 1px solid rgb(63, 78, 107);
     color: #fff;
@@ -77,6 +83,17 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
 }
 
+/*!*=== Submit Button ===*!*/
+#login-form-submit-btn {
+    background-color: #3c9428;
+    border: 1px solid #3c9428;
+    color: #fff;
+}
+#login-form-submit-btn:hover {
+    background-color: rgba(60, 148, 40, 0.45);
+    border: 1px solid rgba(60, 148, 40, 0.45);
+    color:#1e1e1e;
+}
 
 /*=== Error Message Container ===*/
 .alert.warning {
