Decided I am going to change route and take in only one input value for the favorite genre. Showcasing all genres to let them choose.

--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -132,6 +132,17 @@
                                     th:value="${bio}">
                             </textarea>
                         </div>
+                        <!-- Favorite Genre -->
+                        <div class="mb-3">
+                            <label for="setting-favorite-genre" class="form-label">Favorite genre:</label>
+                            <select class="form-select" aria-label="Default select example" id="setting-favorite-genre" name="favoriteGenres">
+                                <option th:value="${0}" selected>Open this select menu</option>
+                                <th:block th:each="genre : ${ListOfGenre}">
+                                    <option th:value="${genre.id}" th:text="${genre.name}">Genre Name</option>
+                                </th:block>
+                            </select>
+                        </div>
+
                         <!-- Submit and Cancel Buttons -->
                         <button type="submit" id="submitEditProfileButton">Submit</button>
                         <button type="reset" id="cancelEditProfileButton">Cancel</button>
