The user will get a message if they try to get more than 5 genres saved.

--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -53,6 +53,8 @@
                     <aside>
                         <p th:each="favGenre : ${user.getFavoriteGenres()}" th:text="${favGenre.genre.name}"></p>
                     </aside>
+                    <!-- If user tries to get more than 5 genres then this message will appear -->
+                    <small th:text="${hitMaxFavGenre}">Default Warning Message</small>
                 </section>
                 <section class="user-setting-container" id="setting-form-container">
                     <form th:action="@{/in/{id} (id=${user.getId()})}"
