--- a/src/main/resources/static/css/userProfileStylesheet.css
+++ b/src/main/resources/static/css/userProfileStylesheet.css
@@ -1,4 +1,44 @@
+.modal-container form .cancel-delete-button, .modal-container form .main-review-delete-button, .modal-container form .main-review-delete-button, .edit-review-form-container .edit-review-delete-button, .edit-review-form .submitButton, .edit-review-form .edit-review-cancel-button {
+    background-color: rgb(169, 169, 169);
+    border: 1px solid rgb(169, 169, 169);
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    box-sizing: border-box;
+    color: #1e1e1e;
+    cursor: pointer;
+    width: fit-content;
+    height: auto;
+    font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    outline: none;
+    padding: 10px 15px;
+    text-align: center;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    text-decoration: none;
+    margin: 24px 0 0 0;
+}
 
+.modal-container form .cancel-delete-button:hover, .modal-container form .main-review-delete-button:hover, .modal-container form .main-review-delete-button, .edit-review-form-container .edit-review-delete-button:hover, .edit-review-form .submitButton:hover, .edit-review-form .edit-review-cancel-button:hover {
+    background-color: rgb(33, 33, 33);
+    border: 1px solid rgb(33, 33, 33);
+    color: #fff;
+    transform: translateY(-2px);
+    box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
+}
+.modal-container form .main-review-delete-button, .edit-review-form-container .edit-review-delete-button{
+    background-color: rgba(237, 100, 121, 0.49);
+    border: 1px solid rgba(237, 100, 121, 0.49);
+}
+/*-- Trash Can Image --*/
+.modal-container form .main-review-delete-button:hover, .edit-review-form-container .edit-review-delete-button:hover{
+    background-color: rgb(238, 39, 68);
+    border: 1px solid rgb(238, 39, 68);
+}
 /*============== Left Side Container ==============*/
 main .row #left-side-user-info-container{
     background: #37517e;
@@ -344,6 +384,15 @@ main .row #left-side-user-info-container{
     width: auto;
 }
 
+.edit-review-delete-button{
+    position: absolute;
+    top: 0;
+    right: 10px;
+}
+.edit-review-delete-button img{
+    height: 100%;
+    width: 28px;
+}
 /*-- Review Book Rating --*/
 #UserReviewContainer .user-review-container section:nth-child(2) span .user-review-book-rating{
     height: 20px;
@@ -357,21 +406,14 @@ main .row #left-side-user-info-container{
     position: relative;
 }
 
- .submitButton{
-    margin-top: 12px;
+.edit-review-form .submitButton{
+    background-color: rgba(100, 149, 237, 0.49);
+    border: 1px solid rgba(100, 149, 237, 0.49);
 }
-
-
-.edit-review-cancel-button{
-   margin-top: 12px;
+.edit-review-form .submitButton:hover{
+    background-color: rgb(100, 149, 237);
+    border: 1px solid rgb(100, 149, 237);
 }
-.edit-review-delete-button{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-
 /*!*====== Screen smaller then 991px ======*!*/
 /*@media (max-width: 991px){*/
 
@@ -395,7 +437,7 @@ main .row #left-side-user-info-container{
     .edit-review-delete-button{
         position: absolute;
         top: 0;
-        right: 0;
+        right: 5px;
     }
 
 }
